fix(living-frontend) Removed background colour for editor frame to prevent bleedthrough

--- a/app/src/style/living-frontend.scss
+++ b/app/src/style/living-frontend.scss
@@ -32,7 +32,7 @@ body {
 
 
 .ld-editor-frame {
-    background-color: lighten($toolbar-background, 2);
+    // background-color: lighten($toolbar-background, 2);
 }
 
 .livingdocs-bottom-bar {
